--- a/Isometric Web Game/index.html
+++ b/Isometric Web Game/index.html
@@ -3,8 +3,8 @@
         <head>
             <meta charset = "utf-8" />
             <meta name = "viewport" content= "width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-            <title>Wave Storm</title>
-            <script type = "text/javascript" src="js/phaser.js"></script>
+            <title>Battle Arena</title>
+            <script type = "text/javascript" src="js/phaser.min.js"></script>
             <style>
                 body{
                     padding: 0px;
@@ -14,13 +14,8 @@
             </style>
 
             <!-- include the main game file -->
-            <script type="text/javascript" src="js/phaser.js"></script>
-            <script type="text/javascript" src="js/Isometric.js"></script>
-            <script type="text/javascript" src="js/IsoSprite.js"></script>
-            <script type="text/javascript" src="js/Octree.js"></script>
-            <script type="text/javascript" src="js/Cube.js"></script>
-            <script type="text/javascript" src="js/Point3.js"></script>
-            <script type="text/javascript" src="js/Projector.js"></script>
+            <script type="text/javascript" src="js/phaser.min.js"></script>
+            <script type="text/javascript" src="js/phaser-plugin-isometric.min.js"></script>
             <script type="text/javascript" src="js/states/play.js"></script>
             
 
