--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script type="text/javascript" src="js/phaser-plugin-isometric.min.js"></script>
 		<script type="text/javascript" src="js/maths/vector2.js"></script>
 		<script type="text/javascript" src="js/gameplay/enemy.js"></script>
+		<script type="text/javascript" src="js/gameplay/player.js"></script>
 		<script type="text/javascript" src="js/states/play.js"></script>
 
 
