--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 		<!-- include the main game file -->
 		<script type="text/javascript" src="js/phaser.min.js"></script>
 		<script type="text/javascript" src="js/phaser-plugin-isometric.min.js"></script>
+        <script type="text/javascript" src="js/states/boot.js"></script>
+        <script type="text/javascript" src="js/states/load.js"></script>
+        <script type="text/javascript" src="js/states/menu.js"></script>
+        <script type="text/javascript" src="js/states/play.js"></script>
+        <script type="text/javascript" src="js/states/game.js"></script>
 		<script type="text/javascript" src="js/maths/vector2.js"></script>
 		<script type="text/javascript" src="js/gameplay/enemy.js"></script>
 		<script type="text/javascript" src="js/gameplay/player.js"></script>
-		<script type="text/javascript" src="js/states/play.js"></script>
 
 
 	</head>
