New pre menu screen + quote
Pre menu screen state 'quote' added to game, title of game also changed + music added. Portal also added to scene.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,21 @@
 		<!-- include the main game file -->
 		<script type="text/javascript" src="js/phaser.min.js"></script>
 		<script type="text/javascript" src="js/phaser-plugin-isometric.min.js"></script>
+        
         <script type="text/javascript" src="js/states/boot.js"></script>
         <script type="text/javascript" src="js/states/load.js"></script>
+        <script type="text/javascript" src="js/states/quote.js"></script>
         <script type="text/javascript" src="js/states/menu.js"></script>
+        <script type="text/javascript" src="js/states/select.js"></script>
         <script type="text/javascript" src="js/states/play.js"></script>
         <script type="text/javascript" src="js/states/game.js"></script>
+        
 		<script type="text/javascript" src="js/maths/vector2.js"></script>
 		<script type="text/javascript" src="js/gameplay/enemy.js"></script>
 		<script type="text/javascript" src="js/gameplay/player.js"></script>
+        <script type="text/javascript" src="js/gameplay/assassin.js"></script>
+        <script type="text/javascript" src="js/gameplay/rino.js"></script>
+        <script type="text/javascript" src="js/gameplay/portal.js"></script>
 
 
 	</head>
