--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script type="text/javascript" src="js/states/load.js"></script>
         <script type="text/javascript" src="js/states/quote.js"></script>
         <script type="text/javascript" src="js/states/menu.js"></script>
+        <script type="text/javascript" src="js/states/controls.js"></script>
         <script type="text/javascript" src="js/states/select.js"></script>
         <script type="text/javascript" src="js/states/play.js"></script>
         <script type="text/javascript" src="js/states/game.js"></script>
