Health bar +death states
Uploaded health bar for the player when hit by enemy, changes colour depending how low on health. Also included death.js state when players hp reaches zero with button to go back to menu or select screen. NOTE: There is a problem after death screen with enemy class when user tries to renter arena: (Uncaught TypeError: Cannot read property 'isFinished' of null)

I also deleted certain sprites/spritesheets that were no longer being used to save on loading times.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 		<script type="text/javascript" src="js/states/controls.js"></script>
 		<script type="text/javascript" src="js/states/select.js"></script>
 		<script type="text/javascript" src="js/states/play.js"></script>
+        <script type="text/javascript" src="js/states/death.js"></script>
 		<script type="text/javascript" src="js/states/game.js"></script>
+        
 
 		<script type="text/javascript" src="js/maths/vector2.js"></script>
 		<script type="text/javascript" src="js/gameplay/enemy.js"></script>
